--- a/style.html
+++ b/style.html
@@ -2730,6 +2730,34 @@
             }
         }
         @media (max-width: 768px) {
+            .filters {
+                flex-direction: column;
+                align-items: stretch;
+            }
+            .filters-group {
+                width: 100%;
+            }
+            .contingencia-actions {
+                width: 100%;
+                flex-wrap: wrap;
+                align-items: stretch;
+                gap: 8px;
+            }
+            .filter-search {
+                flex: 1 1 100%;
+                width: 100%;
+            }
+            .btn-toggle-dados,
+            .btn-contingencia {
+                flex: 1 1 calc(50% - 4px);
+                min-width: 0;
+                justify-content: center;
+                text-align: center;
+                white-space: normal;
+            }
+            .btn-toggle-dados .toggle-dados-label {
+                white-space: normal;
+            }
             .cards-hero {
                 grid-template-columns: 1fr 1fr;
             }
@@ -2895,6 +2923,14 @@
                 left: 12px;
                 right: 12px;
                 width: auto;
+            }
+            .contingencia-actions {
+                flex-direction: column;
+            }
+            .btn-toggle-dados,
+            .btn-contingencia {
+                flex: 1 1 100%;
+                width: 100%;
             }
         }
     </style>
