Increase z-index for mobile selector dropdowns

--- a/style.html
+++ b/style.html
@@ -454,6 +454,7 @@
             opacity: 1;
             pointer-events: auto;
             transform: translate(-50%, 0);
+            z-index: 2100;
         }
         .selector-options {
             list-style: none;
