--- a/index.html
+++ b/index.html
@@ -592,6 +592,22 @@
             </div>
             <div class="modal-body">
                 <form id="armario-form">
+                    <div class="form-group prontuario-search">
+                        <div class="prontuario-search-header">
+                            <label for="prontuario-busca">Pesquisar prontuário <span class="tag-opcional">Opcional</span></label>
+                            <div class="prontuario-search-actions">
+                                <div class="prontuario-input-group">
+                                    <input type="text" id="prontuario-busca" class="form-control" inputmode="numeric" autocomplete="off" placeholder="Digite o prontuário do paciente">
+                                    <button type="button" class="btn btn-primary" id="btn-buscar-prontuario">
+                                        <i class="fas fa-search"></i>
+                                        Buscar
+                                    </button>
+                                </div>
+                                <div class="field-hint">Busca opcional na aba "Base Vitae 1". Preenche paciente e leito automaticamente quando encontrar.</div>
+                            </div>
+                        </div>
+                        <div class="search-feedback" id="prontuario-busca-feedback" role="status" aria-live="polite"></div>
+                    </div>
                     <div class="form-group">
                         <label for="nome-paciente">Nome do Paciente</label>
                         <input type="text" id="nome-paciente" class="form-control" required>
