--- a/style.html
+++ b/style.html
@@ -1808,6 +1808,190 @@
                 width: 100%;
             }
         }
+        /* Modal de impressão de reserva */
+        .modal.modal-print {
+            padding: 16px 10px;
+        }
+        .modal-print .modal-content {
+            background: transparent;
+            border: none;
+            box-shadow: none;
+            max-width: 520px;
+            width: min(100%, 520px);
+            display: flex;
+            justify-content: center;
+        }
+        .modal-print-wrapper {
+            display: flex;
+            flex-direction: column;
+            gap: 14px;
+            align-items: center;
+            width: 100%;
+        }
+        .modal-print .modal-close {
+            align-self: flex-end;
+            color: #94a3b8;
+        }
+        .modal-print .modal-close:hover,
+        .modal-print .modal-close:focus-visible {
+            color: #0f172a;
+        }
+        .print-ticket {
+            width: min(100%, 380px);
+            background: #ffffff;
+            border-radius: 16px;
+            padding: 18px 18px 14px;
+            border: 1px solid #e2e8f0;
+            box-shadow: 0 20px 40px rgba(15, 23, 42, 0.16);
+            color: #0f172a;
+            position: relative;
+            overflow: hidden;
+        }
+        .print-ticket::before {
+            content: '';
+            position: absolute;
+            inset: 10px;
+            border-radius: 12px;
+            border: 1px dashed #cbd5e1;
+            opacity: 0.6;
+            pointer-events: none;
+        }
+        .print-ticket-header {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 6px;
+            text-align: center;
+            margin-bottom: 10px;
+        }
+        .print-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            padding: 6px 10px;
+            border-radius: 999px;
+            border: 1px solid #0f172a;
+            font-weight: 700;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+            font-size: 0.72rem;
+        }
+        .print-title {
+            font-size: 1.1rem;
+            font-weight: 700;
+        }
+        .print-subtitle {
+            font-size: 0.85rem;
+            color: #475569;
+            letter-spacing: 0.01em;
+        }
+        .print-ticket-body {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            padding: 8px 6px 4px;
+        }
+        .print-row {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            gap: 12px;
+        }
+        .print-row span {
+            font-size: 0.75rem;
+            letter-spacing: 0.04em;
+            text-transform: uppercase;
+            color: #475569;
+            white-space: nowrap;
+        }
+        .print-row strong {
+            font-size: 0.95rem;
+            font-weight: 700;
+            color: #0f172a;
+            text-align: right;
+            line-height: 1.3;
+            flex: 1;
+        }
+        .print-ticket-footer {
+            display: grid;
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+            gap: 10px;
+            padding: 12px 6px 4px;
+            border-top: 1px dashed #cbd5e1;
+            margin-top: 8px;
+        }
+        .print-meta span {
+            font-size: 0.72rem;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            color: #64748b;
+            display: block;
+        }
+        .print-meta strong {
+            display: block;
+            margin-top: 4px;
+            font-size: 0.95rem;
+            font-weight: 700;
+        }
+        .print-actions {
+            justify-content: center;
+            gap: 12px;
+            padding: 12px 4px 2px;
+        }
+        .print-actions .btn {
+            min-width: 120px;
+        }
+        @media (max-width: 640px) {
+            .modal.modal-print {
+                padding: 12px 6px;
+            }
+            .modal-print .modal-content {
+                width: 100%;
+            }
+            .print-ticket {
+                width: 100%;
+                border-radius: 14px;
+            }
+        }
+        @media print {
+            body.modal-print-open * {
+                visibility: hidden;
+            }
+            body.modal-print-open #impressao-reserva-modal,
+            body.modal-print-open #impressao-reserva-modal * {
+                visibility: visible;
+            }
+            body.modal-print-open #impressao-reserva-modal {
+                position: static;
+                display: block !important;
+                background: transparent;
+                padding: 0;
+                height: auto;
+                width: auto;
+            }
+            body.modal-print-open #impressao-reserva-modal .modal-content {
+                box-shadow: none;
+                border: none;
+                width: auto;
+                max-width: none;
+                height: auto;
+            }
+            body.modal-print-open .print-actions,
+            body.modal-print-open .modal-close {
+                display: none !important;
+            }
+            body.modal-print-open .print-ticket {
+                box-shadow: none;
+                border: 1px solid #000;
+                width: 80mm;
+                max-width: 80mm;
+                padding: 16px;
+            }
+            body.modal-print-open .print-ticket::before {
+                inset: 8px;
+                border-color: #000;
+            }
+        }
         /* Termo Wizard */
         .wizard-card {
             background: var(--surface-color);
